--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "vercel",
+  "name": "jhhgbuio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Bla bla.",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/evisintin1/vercel.git"
-  },
-  "author": "yo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/evisintin1/vercel/issues"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -31,5 +23,14 @@
     "path": "^0.12.7",
     "validator": "^13.7.0"
   },
-  "homepage": "https://github.com/evisintin1/vercel#readme"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/evisintin1/jhhgbuio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/evisintin1/jhhgbuio/issues"
+  },
+  "homepage": "https://github.com/evisintin1/jhhgbuio#readme"
 }
