--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "./views/index.ejs",
+        "src": "app.js",
         "use": "@now/node"
       }
     ],
@@ -11,7 +11,7 @@
         
         "src": "/(.*)",
         
-        "dest": "./views/index.ejs"
+        "dest": "app.js"
       }
     ]
   }
