--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "busboy": "^1.6.0",
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
+    "dicer": "^0.3.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
